# splitwise-bot

./: CHANGELOG.md  README.md  splitwise-bot.cabal
