cabal-version:      2.4
name:               splitwise-bot
version:            0.1.0.0
synopsis:           A Splitwise bot for Telegram
description:
  Please see the README on GitHub at <https://github.com/TurtlePU/splitwise-bot#readme>

homepage:           https://github.com/TurtlePU/splitwise-bot#readme
bug-reports:        https://github.com/TurtlePU/splitwise-bot/issues
license:            GPL-3.0-only
license-file:       LICENSE
author:             TurtlePU
maintainer:         sokolov.p64@gmail.com
extra-source-files:
  README.md
  CHANGELOG.md

executable splitwise-bot
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
